# HapticSoftware

./: .gitignore  CMakeLists.txt  Haptic2DDevice  Haptic2DDevice.cpp  Haptics.pro  Haptics.pro.user.d18ec7e  HaptiqueArduinoSim.cpp  Makefile  README.md  Visuals.cpp  Visuals.h  body.cpp  body.h  connectiondialog.cpp  connectiondialog.h  createobject.cpp  createobject.h  createobject.ui  effector.cpp  effector.h  hapticinterface.cpp  hapticinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newobject.ui  pantograph.cpp  pantograph.h  physics.cpp  physics.h  qsfmlcanvas.cpp  qsfmlcanvas.h  visual.cpp  visual.h
ArduinoEmulator/: Haptic2DDevice.cpp  compile.sh
Plugins/: Qt5Network.lib  Qt5Networkd.lib
